fix wrong position

--- a/styles/paypage.scss
+++ b/styles/paypage.scss
@@ -293,10 +293,10 @@ body {
       background-size: cover;
       background-repeat: no-repeat;
       background-position: right;
-      top: 1263px;
+      top: 876px;
       left: 0px;
-      width: 96px;
-      height: 204px;
+      width: 94px;
+      height: 361px;
     }
     .top {
       font-size: 18px;
